@@ -63,8 +63,6 @@ public:
   /** Dimension accessor */
   virtual UnsignedInteger getInputDimension() const;
   virtual UnsignedInteger getOutputDimension() const;
-  // @deprecated
-  virtual UnsignedInteger getDimension() const;
 
   /** Size accessor */
   virtual UnsignedInteger getSize() const;
