@@ -69,9 +69,6 @@ public:
   OptimizationAlgorithm getOptimizationAlgorithm() const;
   void setOptimizationAlgorithm(const OptimizationAlgorithm & algorithm);
 
-  /** @deprecated Candidate accessor */
-  Point getCandidate() const;
-
   /** ParameterMean accessor */
   Point getParameterMean() const;
 
